--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,11 +1,14 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-fundo: #6f00ff;
+  --p-progressbar-background: red;
 }
 
 /* semantic color variables for this project */
 :root {
   --color-background: #6f00ff;
+  --p-progressbar-background: red;
+  --p-progressbar-value-background: red;
 }
 
 *,
