--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,14 @@
 @import './base.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&display=swap');
 
 #CorFundo {
   background-color: var(--vt-c-fundo);
   height: 100vh;
   width: 100vw;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
