:sparkles: criou movimentacao dos peixes no aquario

--- a/src/components/aquario-fundo/AquarioFundo.css
+++ b/src/components/aquario-fundo/AquarioFundo.css
@@ -1,123 +1,11 @@
-@keyframes peixe_move01 {
-  0% {
-    transform: translate(0vw); /* Começa na posição 0vw */
-    -webkit-transform: translate(0vw);
-  }
-  10% {
-    transform: translate(14vw, -125px); /* Proporção ajustada para 70vw no total */
-    -webkit-transform: translate(14vw, -125px);
-  }
-  20% {
-    transform: translate(28vw, -45px) rotateZ(22deg); /* Proporção ajustada */
-    -webkit-transform: translate(28vw, -45px) rotateZ(22deg);
-  }
-  30% {
-    transform: translate(42vw, -250px); /* Proporção ajustada */
-    -webkit-transform: translate(42vw, -250px);
-  }
-  40% {
-    transform: translate(56vw, -80px) rotateZ(22deg); /* Proporção ajustada */
-    -webkit-transform: translate(56vw, -80px) rotateZ(22deg);
-  }
-  50% {
-    transform: translate(70vw, -145px); /* Vai até 70vw */
-    -webkit-transform: translate(70vw, -145px);
-  }
-  51% {
-    transform: translate(70vw, -145px) rotateY(180deg); /* Vira em 70vw */
-    -webkit-transform: translate(70vw, -145px) rotateY(180deg);
-  }
-  60% {
-    transform: translate(56vw, -80px) rotateY(180deg) rotateZ(22deg); /* Começa a voltar */
-    -webkit-transform: translate(56vw, -80px) rotateY(180deg) rotateZ(22deg);
-  }
-  70% {
-    transform: translate(42vw, -250px) rotateY(180deg); /* Continua voltando */
-    -webkit-transform: translate(42vw, -250px) rotateY(180deg);
-  }
-  80% {
-    transform: translate(28vw, -45px) rotateY(180deg) rotateZ(22deg); /* Aproxima-se da origem */
-    -webkit-transform: translate(28vw, -45px) rotateY(180deg) rotateZ(22deg);
-  }
-  90% {
-    transform: translate(14vw, -125px) rotateY(180deg); /* Quase de volta à origem */
-    -webkit-transform: translate(14vw, -125px) rotateY(180deg);
-  }
-  99% {
-    transform: translate(0vw) rotateY(180deg) rotateZ(22deg); /* Volta ao início */
-    -webkit-transform: translate(0vw) rotateY(180deg) rotateZ(22deg);
-  }
-  100% {
-    transform: translate(0vw); /* Posição inicial */
-    -webkit-transform: translate(0vw);
-  }
-}
-
-@keyframes peixe_move02 {
-  0% {
-    transform: translate(0vw); /* Começa na posição 0vw */
-    -webkit-transform: translate(0vw);
-  }
-  10% {
-    transform: translate(-14vw, -125px); /* Move para a esquerda */
-    -webkit-transform: translate(-14vw, -125px);
-  }
-  20% {
-    transform: translate(-28vw, -45px) rotateZ(22deg); /* Continua movendo para a esquerda */
-    -webkit-transform: translate(-28vw, -45px) rotateZ(22deg);
-  }
-  30% {
-    transform: translate(-42vw, -250px); /* Continua movendo mais para a esquerda */
-    -webkit-transform: translate(-42vw, -250px);
-  }
-  40% {
-    transform: translate(-56vw, -80px) rotateZ(22deg); /* Aproxima-se do ponto de retorno */
-    -webkit-transform: translate(-56vw, -80px) rotateZ(22deg);
-  }
-  50% {
-    transform: translate(-70vw, -145px); /* Vai até -70vw */
-    -webkit-transform: translate(-70vw, -145px);
-  }
-  51% {
-    transform: translate(-70vw, -145px) rotateY(180deg); /* Vira ao alcançar -70vw */
-    -webkit-transform: translate(-70vw, -145px) rotateY(180deg);
-  }
-  60% {
-    transform: translate(-56vw, -80px) rotateY(180deg) rotateZ(22deg); /* Começa a voltar */
-    -webkit-transform: translate(-56vw, -80px) rotateY(180deg) rotateZ(22deg);
-  }
-  70% {
-    transform: translate(-42vw, -250px) rotateY(180deg); /* Continua voltando */
-    -webkit-transform: translate(-42vw, -250px) rotateY(180deg);
-  }
-  80% {
-    transform: translate(-28vw, -45px) rotateY(180deg) rotateZ(22deg); /* Aproxima-se da origem */
-    -webkit-transform: translate(-28vw, -45px) rotateY(180deg) rotateZ(22deg);
-  }
-  90% {
-    transform: translate(-14vw, -125px) rotateY(180deg); /* Quase de volta à origem */
-    -webkit-transform: translate(-14vw, -125px) rotateY(180deg);
-  }
-  99% {
-    transform: translate(0vw) rotateY(180deg) rotateZ(22deg); /* Volta ao início */
-    -webkit-transform: translate(0vw) rotateY(180deg) rotateZ(22deg);
-  }
-  100% {
-    transform: translate(0vw); /* Posição inicial */
-    -webkit-transform: translate(0vw);
-  }
-}
-
-.peixe_modelo01 {
+.peixe_posicao01 {
   position: absolute;
   top: 50%;
   left: 0%;
-  animation: peixe_move01 40s cubic-bezier(0.9, 1, 0.3, 0.75) 0s infinite normal;
 }
 
-.peixe_modelo02 {
+.peixe_posicao02 {
   position: absolute;
   top: 50%;
   right: 0%;
-  animation: peixe_move02 25s cubic-bezier(0.7, 1, 0.3, 0.5) 0s infinite normal;
 }
