--- a/src/components/aquario-fundo/AquarioFundo.css
+++ b/src/components/aquario-fundo/AquarioFundo.css
@@ -9,3 +9,13 @@
   top: 50%;
   right: 0%;
 }
+
+.aquario-container {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+}
